# bisheng

./: .gitignore  .gitlab-ci.yml  CI_BUILD_GUIDE.md  README.md  README_CN.md
docker/: deploy.sh  docker-compose.yml
docker/bisheng/config/: config.yaml
src/backend/: .dockerignore  Dockerfile  base.Dockerfile  bisheng_langchain-1.2.1-py3-none-any.whl  bisheng_langchain-1.3.1-py3-none-any.whl  pyproject.toml
src/backend/bisheng/: main.py  settings.py
src/backend/bisheng/api/: __init__.py  cas.py  oauth2.py  router.py
src/backend/bisheng/api/services/: assistant_agent.py  knowledge.py  knowledge_imp.py  workflow.py
src/backend/bisheng/api/services/OSS/: CMS2_storage.py  CMS3_storage.py  __init__.py  base_oss.py  minio_storage.py  storage_factory.py  utils.py
src/backend/bisheng/api/v1/: knowledge.py  qa.py  schemas.py  user.py  workflow.py
src/backend/bisheng/api/v1/schema/: workflow.py
src/backend/bisheng/api/v2/: workflow.py
src/backend/bisheng/cache/: redis.py  utils.py
src/backend/bisheng/chat/clients/: workflow_client.py
src/backend/bisheng/database/models/: flow.py  knowledge.py
src/backend/bisheng/worker/workflow/: redis_callback.py
src/backend/bisheng/workflow/callback/: base_callback.py  event.py  llm_callback.py
src/backend/bisheng/workflow/common/: node.py
src/backend/bisheng/workflow/nodes/: node_manage.py
src/backend/bisheng/workflow/nodes/agent/: agent.py
src/backend/bisheng/workflow/nodes/inspiration_explorer/: inspiration_explorer.py
src/backend/bisheng/workflow/nodes/rag/: rag.py
src/backend/migration/: migration.md
src/backend/migration/sql/: 20250604-knowledge_storage_migration.sql
src/bisheng-langchain/: pyproject.toml
src/bisheng-langchain/bisheng_langchain/gpts/: load_tools.py
src/bisheng-langchain/bisheng_langchain/rag/: bisheng_rag_chain.py  bisheng_rag_tool.py
src/frontend/: Dockerfile
src/frontend/platform/: index.html  package-lock.json  vite.config.mts
src/frontend/platform/public/locales/en/: bs.json  flow.json
src/frontend/platform/public/locales/zh/: bs.json  flow.json
src/frontend/platform/src/: routes.tsx
src/frontend/platform/src/controllers/API/: pro.ts  workflow.ts
src/frontend/platform/src/layout/: MainLayout.tsx
src/frontend/platform/src/pages/BuildPage/: CreateApp.tsx
src/frontend/platform/src/pages/BuildPage/flow/: index.tsx
src/frontend/platform/src/pages/BuildPage/flow/FlowChat/: ChatMessages.tsx  MessageToolCall.tsx  messageStore.ts
src/frontend/platform/src/pages/BuildPage/flow/FlowNode/: NodeLogo.tsx  NodeToolbarComponent.tsx
src/frontend/platform/src/pages/BuildPage/flow/FlowNode/component/: SqlConfigItem.tsx
src/frontend/platform/src/pages/KnowledgePage/: KnowledgeFile.tsx  sync.tsx  timer.tsx
src/frontend/platform/src/pages/KnowledgePage/components/: Jobs.tsx  TaskHeader.tsx  Tasks.tsx
src/frontend/platform/src/pages/LoginPage/: CasCallback.tsx  OAuth2Callback.tsx  OAuth2LogoutCallback.tsx  login.tsx  loginBridge.tsx
src/frontend/platform/src/pages/SystemPage/components/: EditRole.tsx
src/frontend/platform/src/types/flow/: index.ts
src/frontend/platform/src/util/: flowUtils.ts
