[project]
authors = [
    {name = "Dataelement", email = "hanfeng@dataelem.com"},
]
maintainers = [
    {name = "hanfeng", email = "hanfeng@dataelem.com"},
]
license = {text = "Apache 2.0"}
requires-python = "<3.11,>=3.10"
dependencies = [
    "bisheng-langchain",
    "bisheng-pyautogen==0.3.2",
    "langchain<1.0.0,>=0.3.23",
    "langchain-community<1.0.0,>=0.3.21",
    "langchain-experimental",
    "langchain-openai<1.0.0,>=0.3.12",
    "langchain-ollama<1.0.0,>=0.3.0",
    "langchain-google-genai<3.0.0,>=2.1.0",
    "langchain-anthropic<1.0.0,>=0.3.10",
    "langchain-deepseek<1.0.0,>=0.1.3",
    "langgraph<1.0.0,>=0.3.27",
    "openai<2.0.0,>=1.68.2",
    "minio==7.2.0",
    "loguru<1.0.0,>=0.7.1",
    "fastapi-jwt-auth-compat",
    "captcha<1.0.0,>=0.5.0",
    "rsa==4.9",
    "pydantic<3.0.0,>=2.7.2",
    "numexpr<3.0.0,>=2.8.6",
    "pypinyin==0.50.0",
    "celery[redis]<6.0.0,>=5.3.6",
    "redis<6.0.0,>=5.0.0",
    "jieba<1.0.0,>=0.42.1",
    "PyMuPDF<2.0.0,>=1.23.8",
    "shapely<3.0.0,>=2.0.1",
    "fastapi<1.0.0,>=0.115.0",
    "uvicorn<1.0.0,>=0.23.1",
    "beautifulsoup4<5.0.0,>=4.12.2",
    "google-search-results<3.0.0,>=2.4.1",
    "google-api-python-client<3.0.0,>=2.79.0",
    "typer<1.0.0,>=0.9.0",
    "gunicorn<21.0.0,>=20.1.0",
    "pandas<3.0.0,>=2.0.0",
    "chromadb<1.0.0,>=0.3.21",
    "rich<14.0.0,>=13.4.2",
    "networkx<4.0,>=3.1",
    "unstructured[all-docs]<0.18.0,>=0.17.2",
    "pypdf",
    "lxml<5.0.0,>=4.9.2",
    "pysrt<2.0.0,>=1.1.2",
    "fake-useragent<2.0.0,>=1.1.3",
    "docstring-parser<1.0,>=0.15",
    "psycopg2-binary>=2.9.6,<3.0.0",
    "pyarrow<13.0.0,>=12.0.0",
    "tiktoken",
    "wikipedia<2.0.0,>=1.4.0",
    "qdrant-client<2.0.0,>=1.3.0",
    "websockets<11.0,>=10.3",
    "weaviate-client<4.0.0,>=3.21.0",
    "cohere<5.0.0,>=4.11.0",
    "python-multipart<1.0.0,>=0.0.6",
    "sqlmodel<1.0.0,>=0.0.14",
    "pymysql<1.0.0,>=0.10.1",
    "pymilvus==2.4.10",
    "elasticsearch<9.0.0,>=8.9.0",
    "orjson<4.0.0,>=3.9.1",
    "multiprocess<1.0.0,>=0.70.14",
    "cachetools<6.0.0,>=5.3.1",
    "types-cachetools<6.0.0.0,>=5.3.0.5",
    "appdirs<2.0.0,>=1.4.4",
    "supabase<3.0.0,>=2.4.0",
    "certifi<2024.0.0,>=2023.5.7",
    "psycopg<4.0.0,>=3.1.9",
    "psycopg-binary<4.0.0,>=3.1.9",
    "emoji<3.0.0,>=2.10.1",
    "platformdirs>=2.5",
    "scipy",
    "arxiv==2.1.0",
    "matplotlib==3.8.4",
    "cchardet<3.0.0,>=2.1.7",
    "llama-index==0.9.48",
    "tenacity<8.4.0",
    "bisheng-ragas<2.0.0,>=1.0.2",
    "qianfan<1.0.0,>=0.4.4",
    "dashscope<2.0.0,>=1.20.3",
    "blobfile<4.0.0,>=3.0.0",
    "mcp<2.0.0,>=1.6.0",
    "numpy<2.0.0,>=1.26.2",
    "pyjwt<2.0.0,>=1.7.1",
    "tencentcloud-sdk-python<4.0.0,>=3.0.1373",
]
name = "bisheng"
version = "1.1.0"
description = "A Python package with a built-in web application"
readme = "README.md"
keywords = [
    "nlp",
    "langchain",
    "openai",
    "gpt",
    "gui",
]

[project.urls]
repository = "https://github.com/dataelement/bisheng"

[project.scripts]
bisheng = "bisheng.__main__:main"

[dependency-groups]
dev = [
    "black<24.0.0,>=23.1.0",
    "ipykernel<7.0.0,>=6.21.2",
    "mypy<2.0.0,>=1.1.1",
    "ruff<1.0.0,>=0.0.254",
    "httpx<1.0.0,>=0.27.0",
    "pytest<8.0.0,>=7.2.2",
    "types-requests<3.0.0,>=2.28.11",
    "requests<3.0.0,>=2.28.0",
    "pytest-cov<5.0.0,>=4.0.0",
    "pandas-stubs<3.0.0.0,>=2.0.0.230412",
    "types-pillow<10.0.0.0,>=9.5.0.2",
    "types-appdirs<2.0.0.0,>=1.4.3.5",
    "types-pyyaml<7.0.0.0,>=6.0.12.8",
]



[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = ["tests", "integration"]
console_output_style = "progress"
filterwarnings = ["ignore::DeprecationWarning"]
log_cli = true

[tool.uv.sources]
"bisheng-langchain" = { path = "./bisheng_langchain-1.2.1-py3-none-any.whl" }


[tool.ruff]
line-length = 120

[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple"
default = true