[project]
authors = [
    {name = "Dataelement", email = "hanfeng@dataelem.com"},
]
maintainers = [
    {name = "hanfeng", email = "hanfeng@dataelem.com"},
]
license = {text = "Apache 2.0"}
requires-python = ">=3.10,<3.11"
dependencies = [
    "bisheng-langchain",
    "bisheng-pyautogen==0.3.2",
    "langchain>=0.3.23,<1.0.0",
    "langchain-community>=0.3.21,<1.0.0",
    "langchain-experimental",
    "langchain-openai>=0.3.16,<1.0.0",
    "langchain-ollama>=0.3.0,<1.0.0",
    "langchain-google-genai>=2.1.0,<3.0.0",
    "langchain-anthropic>=0.3.10,<1.0.0",
    "langchain-deepseek>=0.1.3,<1.0.0",
    "langgraph>=0.3.27,<1.0.0",
    "openai>=1.68.2,<2.0.0",
    "minio==7.2.0",
    "fastapi-jwt-auth-compat",
    "loguru>=0.7.1,<1.0.0",
    "captcha>=0.5.0,<1.0.0",
    "rsa==4.9",
    "pydantic>=2.7.2,<3.0.0",
    "numexpr>=2.8.6,<3.0.0",
    "pypinyin==0.50.0",
    "celery[redis]>=5.3.6,<6.0.0",
    "redis>=5.0.0,<6.0.0",
    "jieba>=0.42.1,<1.0.0",
    "PyMuPDF>=1.23.8,<2.0.0",
    "shapely>=2.0.1,<3.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.23.1,<1.0.0",
    "beautifulsoup4>=4.12.2,<5.0.0",
    "google-search-results>=2.4.1,<3.0.0",
    "google-api-python-client>=2.79.0,<3.0.0",
    "typer>=0.9.0,<1.0.0",
    "gunicorn>=20.1.0,<21.0.0",
    "pandas>=2.0.0,<3.0.0",
    "chromadb>=0.3.21,<1.0.0",
    "rich>=13.4.2,<14.0.0",
    "networkx>=3.1,<4.0",
    "unstructured>=0.17.2,<0.18.0",
    "pypdf",
    "lxml>=4.9.2,<5.0.0",
    "pysrt>=1.1.2,<2.0.0",
    "fake-useragent>=1.1.3,<2.0.0",
    "docstring-parser>=0.15,<1.0",
    "psycopg2-binary>=2.9.6,<3.0.0",
    "pyarrow>=12.0.0,<13.0.0",
    "tiktoken",
    "wikipedia>=1.4.0,<2.0.0",
    "qdrant-client>=1.3.0,<2.0.0",
    "websockets>=10.3,<11.0",
    "weaviate-client>=3.21.0,<4.0.0",
    "cohere>=4.11.0,<5.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "sqlmodel>=0.0.14,<1.0.0",
    "pymysql>=0.10.1,<1.0.0",
    "pymilvus==2.5.10",
    "elasticsearch>=8.9.0,<9.0.0",
    "orjson>=3.9.1,<4.0.0",
    "multiprocess>=0.70.14,<1.0.0",
    "cachetools>=5.3.1,<6.0.0",
    "types-cachetools>=5.3.0.5,<6.0.0.0",
    "appdirs>=1.4.4,<2.0.0",
    "supabase>=2.4.0,<3.0.0",
    "certifi>=2023.5.7,<2024.0.0",
    "psycopg>=3.1.9,<4.0.0",
    "psycopg-binary>=3.1.9,<4.0.0",
    "emoji>=2.10.1,<3.0.0",
    "platformdirs>=2.5",
    "scipy",
    "arxiv==2.1.0",
    "matplotlib==3.8.4",
    "cchardet>=2.1.7,<3.0.0",
    "llama-index==0.9.48",
    "tenacity<8.4.0",
    "bisheng-ragas>=1.0.2,<2.0.0",
    "qianfan>=0.4.4,<1.0.0",
    "dashscope>=1.20.3,<2.0.0",
    "blobfile>=3.0.0,<4.0.0",
    "mcp>=1.6.0,<2.0.0",
    "numpy>=1.26.2,<2.0.0",
    "pyjwt>=1.7.1,<2.0.0",
    "tencentcloud-sdk-python>=3.0.1373,<4.0.0",
    "markdownify>=1.1.0,<2.0.0",
    "readability>=0.3.2,<1.0.0",
    "readability-lxml>=0.8.4.1,<1.0.0",
    "xlrd>=2.0.1,<3.0.0",
    "openpyxl>=3.1.5,<4.0.0",
    "pypandoc>=1.15,<2.0.0",
    "python-pptx>=1.0.2,<2.0.0",
    "python-docx>=1.1.2,<2.0.0",
    "markdown>=3.8,<4.0.0",
    "tabulate>=0.9.0,<1.0.0",
    "flower>=2.0.1",
]
name = "bisheng"
version = "1.3.1"
description = "A Python package with a built-in web application"
readme = "README.md"
keywords = [
    "nlp",
    "langchain",
    "openai",
    "gpt",
    "gui",
]

[project.urls]
repository = "https://github.com/dataelement/bisheng"

[project.scripts]
bisheng = "bisheng.__main__:main"

[dependency-groups]
dev = [
    "black<24.0.0,>=23.1.0",
    "ipykernel<7.0.0,>=6.21.2",
    "mypy<2.0.0,>=1.1.1",
    "ruff<1.0.0,>=0.0.254",
    "httpx<1.0.0,>=0.27.0",
    "pytest<8.0.0,>=7.2.2",
    "types-requests<3.0.0,>=2.28.11",
    "requests<3.0.0,>=2.28.0",
    "pytest-cov<5.0.0,>=4.0.0",
    "pandas-stubs<3.0.0.0,>=2.0.0.230412",
    "types-pillow<10.0.0.0,>=9.5.0.2",
    "types-appdirs<2.0.0.0,>=1.4.3.5",
    "types-pyyaml<7.0.0.0,>=6.0.12.8",
]



[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = ["tests", "integration"]
console_output_style = "progress"
filterwarnings = ["ignore::DeprecationWarning"]
log_cli = true

[tool.uv.sources]
"bisheng-langchain" = { path = "./bisheng_langchain-1.3.1-py3-none-any.whl" }


[tool.ruff]
line-length = 120

[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple"
default = true
